# plex-api

./: .env.example  .gitignore  BRIEFING.md  CLAUDE.md  Fusion360_Tool_Library_Reference.md  Plex_API_Reference.md  README.md  TODO.md  app.py  aps_client.py  bootstrap.py  enrich.py  ingest_reference.py  plex_api.py  plex_diagnostics.py  populate_supply_items.py  pyproject.toml  run_dev.py  supabase_client.py  sync.py  sync_supabase.py  sync_tool_inventory.py  tool_library_loader.py  validate_library.py  wrangler.jsonc
.claude/: launch.json
.github/workflows/: test.yml
db/migrations/: 0001_initial_schema.sql  0002_reference_catalog.sql  0003_source_modified_at.sql  0004_anon_read_reference_catalog.sql  0005_tools_plex_linkage.sql  0006_plex_supply_items.sql  0007_anon_read_plex_supply_items.sql
docs/: BRIEFING.md  GCP_MIGRATION.md  NEXT_SESSION.md  Plex_API_Reference.md  Plex_Classic_API_Request.md  Postman_Collections.md  REORG_AND_STACK.md  validate_library_spec.md
docs/superpowers/plans/: 2026-04-17-plex-mimic-mock.md
scripts/: load_sample.py
scripts/gcp/: 00-provision.sh  01-apis.sh  02-vpc.sh  03-psc-sql.sh  04-service-accounts.sh  05-secrets.sh  06-cloud-sql.sh  07-vms.sh  08-scheduler.sh  10-populate-secrets.sh  99-teardown.sh  env.sh
static/css/: style.css
static/js/: script.js
templates/: index.html
tests/: conftest.py  test_app_routes.py  test_aps_client.py  test_bootstrap.py  test_enrich.py  test_ingest_reference.py  test_plex_api.py  test_plex_diagnostics.py  test_plex_mock_diff.py  test_plex_mock_server.py  test_plex_mock_store.py  test_populate_supply_items.py  test_run_dev.py  test_supabase_client.py  test_sync.py  test_sync_supabase.py  test_sync_tool_inventory.py  test_tool_library_loader.py  test_validate_library.py
tests/fixtures/plex_mock/: expected_supply_items.json
tools/: __init__.py
tools/plex_mock/: README.md  __init__.py  capture_snapshots.py  diff.py  server.py  store.py
tools/plex_mock/snapshots/: README.md
tools/plex_mock/systemd/: README.md  datum-plex-mock.service
web/: .env.example  index.html  package-lock.json  package.json
web/public/: _redirects
web/src/: App.tsx
web/src/components/: Layout.tsx
web/src/lib/: types.ts  utils.ts
web/src/pages/: BuildLibraryPage.tsx  LibrariesPage.tsx  RecentPage.tsx  ScriptsPage.tsx  ToolDetailPage.tsx  ToolsPage.tsx
