[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datum"
version = "0.1.0"
description = "Fusion 360 tool library sync pipeline — Grace Engineering"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
datum-sync = "sync:cli"
datum-sync-inventory = "sync_tool_inventory:cli"
datum-ingest-reference = "ingest_reference:main"
datum-enrich = "enrich:main"
datum-populate-supply-items = "populate_supply_items:cli"
datum-plex-mock-serve    = "tools.plex_mock.server:main"
datum-plex-mock-snapshot = "tools.plex_mock.capture_snapshots:main"
datum-plex-mock-diff     = "tools.plex_mock.diff:main"

[tool.setuptools]
# Flat layout — all modules live at the repo root, no src/ directory.
py-modules = [
    "app",
    "aps_client",
    "bootstrap",
    "build_supply_item_payload",
    "populate_supply_items",
    "plex_api",
    "plex_diagnostics",
    "supabase_client",
    "sync",
    "sync_supabase",
    "sync_tool_inventory",
    "tool_library_loader",
    "validate_library",
    "enrich",
    "ingest_reference",
]
# Explicit package list — flat root modules use py-modules above;
# sub-packages with __init__.py are listed here.
packages = ["tools", "tools.plex_mock"]
